chore: more refactoring